Estilos de desktop terminados

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./desktop.css" media="(min-width: 1250px)">
     <title>Intro Component with a Sign-Up Form</title>
 </head>
 <body>
@@ -56,9 +57,6 @@
             <p class="footer">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
 
         </form>
-
-        
-
 
     </main>
 </body>
